--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,4 +1,4 @@
-<h2><%= book.title %></h2>
+<h2 class="page-header"><%= book.title %></h2>
 <img width = 100 height = 150 src="<%= book.coverImagePath %>">
 <div>Author: <a href="/authors/<%= book.author.id %>"><%= book.author.name %></a></div>
 <div>Publish Date: <%= book.publishDate.toDateString() %></div>
@@ -6,4 +6,4 @@
 <div>Description: <%= (book.description != null && book.description != "") ? book.description : "No Description" %></div>
 <a href="/books/<%= book.id %>/edit">Edit</a>
 <%- include('../partials/deleteForm', {url: `/books/${book.id}`}) %>
-<a hred="/authors/<%= book.author.id %>">View Author</a>
+<a href="/authors/<%= book.author.id %>">View Author</a>
