--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,9 +1,18 @@
 <h2 class="page-header"><%= book.title %></h2>
 <img width = 100 height = 150 src="<%= book.coverImagePath %>">
-<div>Author: <a href="/authors/<%= book.author.id %>"><%= book.author.name %></a></div>
-<div>Publish Date: <%= book.publishDate.toDateString() %></div>
-<div>Page Count: <%= book.pageCount %></div>
-<div>Description: <%= (book.description != null && book.description != "") ? book.description : "No Description" %></div>
+<div>
+    Author: <a href="/authors/<%= book.author.id %>"><%= book.author.name %></a>
+</div>
+<div>
+    Publish Date: <%= book.publishDate.toDateString() %>
+</div>
+<div>
+    Page Count: <%= book.pageCount %>
+</div>
+<div>
+    Description: <%= (book.description != null && book.description != "") ? book.description : "No Description" %>
+</div>
+
 <a href="/books/<%= book.id %>/edit">Edit</a>
 <%- include('../partials/deleteForm', {url: `/books/${book.id}`}) %>
 <a href="/authors/<%= book.author.id %>">View Author</a>
